[project]
name = "olink-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bio>=1.8.0",
    "elasticsearch>=7.0.0,<8.0.0",
    "graphistry>=0.36.1",
    "haystack>=0.42",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pydantic==2.0.0",
    "scikit-learn>=1.6.1",
    "typing-extensions>=4.5.0",
    "umap>=0.1.1",
]
