[project]
name = "olink-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bio>=1.8.0",
    "pydantic==2.1.0",
    "torch>=2.7.0",
    "biopython==1.81",
    "haystack-ai",
    "transformers",
    "scikit-learn>=1.6.1",
]
