[project]
name = "olink-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bio>=1.8.0",
    "torch>=2.7.0",
    "transformers",
    "scikit-learn>=1.6.1",
    "haystack-ai==2.6.1",
    "pip>=25.1.1",
    "elasticsearch-haystack>=2.1.0",
    "sentence-transformers==3.0.0",
    "aiohttp>=3.11.18",
    "certifi",
    "sentencepiece>=0.2.0",
    "accelerate>=1.6.0",
]
